--- a/css/style.css
+++ b/css/style.css
@@ -21,10 +21,15 @@
 /*General-styles*/
 
 .page {
+    position: relative;
     font-family: "Open Sans", Arial, sans-serif;
     font-weight: normal;
     font-style: normal;
     color: #0f0d0e;
+    margin: 0 auto;
+}
+
+.max-width {
     max-width: 1660px;
     margin: 0 auto;
 }
@@ -150,6 +155,76 @@ input:focus {
     }
 }
 
+/*Banner-section*/
+
+.banner-section {
+    content: "";
+    position: absolute;
+    display: block;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 100;
+    text-align: center;
+}
+
+.banner {
+    position: fixed;
+    /*display: flex;*/
+    /*flex-flow: column;*/
+    height: 590px;
+    width: 390px;
+    top: calc(50% - (513px/2));
+    left: calc(50% - (390px/2));
+    background-color: #fff;
+    /*z-index: 101;*/
+}
+
+.banner__row :not(.banner__row .button) {
+    font-size: 0.75rem;
+}
+
+.banner__row {
+    display: block;
+    margin-top: 28px;
+}
+
+.banner__phrase {
+    display: block;
+}
+
+.banner__input {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url(../svg/form-arrows.svg);
+    background-repeat: no-repeat;
+    background-position: right 5% center;
+    background-size: 3.7%;
+}
+
+.banner__radio {
+    display: inline-block;
+}
+
+.banner__textarea {
+    height: 132px;
+    width: 330px;
+    resize: none;
+}
+
+.banner__textarea, .banner__input {
+    border-bottom: 1px solid #ffffff;
+}
+
+.banner__textarea:focus {
+    outline: 1px solid #b59f5b;
+}
+
+.banner__textarea:hover, .banner__input:hover {
+    border-bottom: 1px #ebe7d7 solid;
+}
+
+
 /*Header-styles*/
 
 .main-header {
@@ -182,8 +257,9 @@ input:focus {
     }
 }
 
-.main-header:before {
+.main-header::before {
     content: "";
+    display: block;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -191,7 +267,7 @@ input:focus {
 }
 
 .main-header_elements-container {
-    position: absolute;
+    position: relative;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -201,6 +277,7 @@ input:focus {
     height: 100%;
     /*margin: 0 14.75903614% 0 14.75903614%;*/
     text-align: center;
+    z-index: 1;
 }
 
 @media screen and (min-width: 641px) and (max-width: 1199px) {
@@ -499,7 +576,7 @@ input:focus {
     }
 }
 
-.section-heading:after {
+.section-heading::after {
     content: "";
     display: block;
     margin: 0 auto;
@@ -510,7 +587,7 @@ input:focus {
 }
 
 @media screen and (min-width: 641px) {
-    .section-heading:after {
+    .section-heading::after {
         padding-top: 7px;
     }
 }
@@ -636,8 +713,9 @@ input:focus {
     background-size: cover;
 }
 
-.link-container__interior:before {
+.link-container__interior::before {
     content: "";
+    display: block;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -645,7 +723,7 @@ input:focus {
 }
 
 .link-container__text-container {
-    position: absolute;
+    position: relative;
     align-self: end;
     width: calc(100% - 61px);
     max-height: calc(100% - 90px);
@@ -656,6 +734,7 @@ input:focus {
     padding-left: 25px;
     padding-top: 28px;
     border: 3px solid rgba(181, 159, 91, 0.6);
+    z-index: 1;
 }
 
 @media screen and (min-width: 641px) and (max-width: 1199px) {
@@ -869,7 +948,7 @@ input:focus {
     }
 }
 
-.articles__item:after {
+.articles__item::after {
     content: "";
     display: block;
     margin: 0 auto;
@@ -879,17 +958,17 @@ input:focus {
 }
 
 @media screen and (min-width: 641px) and (max-width: 1199px) {
-    .articles__item:after {
+    .articles__item::after {
         padding-bottom: 3px;
     }
 
-    .articles__item:last-child:after {
+    .articles__item:last-child::after {
         display: none;
     }
 }
 
 @media screen and (min-width: 1200px) {
-    .articles__item:after {
+    .articles__item::after {
         display: none;
     }
 }
@@ -1058,7 +1137,7 @@ input:focus {
     }
 }
 
-.aside__text:after {
+.aside__text::after {
     padding-top: 0;
     padding-bottom: 5px;
 }
@@ -1221,7 +1300,7 @@ input:focus {
     }
 }
 
-.tags__header .aside__text:after {
+.tags__header .aside__text::after {
     margin-top: 1px;
     text-align: center;
 }
@@ -1232,13 +1311,13 @@ input:focus {
         margin-left: -3px;
     }
 
-    .tags__header .aside__text:after {
+    .tags__header .aside__text::after {
         margin-left: 2px;
     }
 }
 
 @media screen and (min-width: 1200px) {
-    .tags__header .aside__text:after {
+    .tags__header .aside__text::after {
         margin-top: 0;
         margin-left: 2px;
     }
@@ -1370,7 +1449,7 @@ input:focus {
     }
 }
 
-.shop .section-heading:after {
+.shop .section-heading::after {
         margin-top: 3px;
     }
 
@@ -1384,7 +1463,7 @@ input:focus {
         margin-bottom: 4px;
     }
 
-    .shop .section-heading:after {
+    .shop .section-heading::after {
         margin-top: -1px;
     }
 }
@@ -1394,7 +1473,7 @@ input:focus {
         margin-bottom: 0;
     }
 
-    .shop .section-heading:after {
+    .shop .section-heading::after {
         margin-top: 0;
     }
 }
