--- a/css/style.css
+++ b/css/style.css
@@ -177,12 +177,24 @@ input:focus {
     display: block;
 }
 
-
 .banner__close {
-    position: absolute;
-    top: -26px;
-    left: 95.9%;
+        position: absolute;
+        top: -33px;
+        right: 1px;
+        width: 27px;
+        opacity: 60%;
+    }
+
+@media screen and (min-width: 1200px) {
+    .banner__close {
+        position: absolute;
+        top: -26px;
+        left: 95.9%;
+        width: 18px;
+        z-index: 999;
+    }
 }
+
 
 .banner__close:hover {
     cursor: pointer;
@@ -192,8 +204,6 @@ input:focus {
     position: absolute;
     width: 100%;
     height: 100%;
-    left: 0;
-    top: 0;
     z-index: 101;
 }
 
@@ -202,13 +212,25 @@ input:focus {
     box-sizing: border-box;
     display: flex;
     flex-flow: column;
-    height: 590px;
-    width: 390px;
-    top: calc(50% - (513px/2));
-    left: calc(50% - (390px/2));
+    height: 546px;
+    width: 331px;
+    top: 56px;
+    left: calc(50% - (331px/2));
+    margin: 0 auto;
     background-color: #fff;
     z-index: 102;
-    padding: 0 30px 30px 30px;
+    padding: 0 25px 30px 25px;
+}
+
+@media screen and (min-width: 1200px) {
+    .banner {
+        height: 590px;
+        width: 390px;
+        top: calc(50% - (513px/2));
+        left: calc(50% - (390px/2));
+        padding: 0 30px 30px 30px;
+
+    }
 }
 
 .banner .banner-header {
@@ -221,35 +243,71 @@ input:focus {
 .banner .banner-header__heading {
     width: 100%;
     text-align: center;
-    margin-top: 47px;
-    margin-left: 5px;
+    margin-top: 21px;
+    margin-left: 0;
+}
+
+@media screen and (min-width: 1200px) {
+    .banner .banner-header__heading {
+        margin-top: 47px;
+        margin-left: 5px;
+    }
 }
 
 .banner .banner-header ::after {
-    margin-left: 125px;
-    /*margin-bottom: 200px;*/
-
+    margin-top: 3px;
 }
+
+@media screen and (min-width: 1200px) {
+    .banner .banner-header ::after {
+        margin-left: 125px;
+        /*margin-bottom: 200px;*/
+    }
+}
+
 
 .banner__row :not(.banner__row .button) {
     font-size: 0.81rem;
-
 }
 
 .banner__row {
     display: block;
     margin-top: 24px;
-
 }
+
+.banner__row:nth-child(3) {
+    margin-top: 21px;
+}
+
+@media screen and (min-width: 1200px) {
+    .banner__row {
+        margin-top: 24px;
+    }
+}
+
 
 .banner__phrase {
     display: inline-block;
     width: 100%;
     margin-bottom: 10px;
+    line-height: 1rem;
+}
+
+@media screen and (min-width: 1200px) {
+    .banner__phrase {
+        height: unset;
+        margin-bottom: 10px;
+    }
 }
 
 .banner__phrase:nth-child(1) {
     margin-bottom: 8px;
+}
+
+@media screen and (min-width: 1200px) {
+    .banner__phrase:nth-child(1) {
+        margin-bottom: 8px;
+    }
 }
 
 .banner__input {
@@ -259,42 +317,84 @@ input:focus {
     -moz-appearance: none;
     background-image: url(../svg/form-arrows.svg);
     background-repeat: no-repeat;
-    background-position: right 13px center;
-    background-size: 2.9%;
-    margin-bottom: 5px;
+    background-position: bottom 15px right 15px;
+    background-size: 3.5%;
+    margin-bottom: 4px;
     padding: 1px 0 0 19px;
+    height: 50px;
+}
+
+@media screen and (min-width: 1200px) {
+    .banner__input {
+        height: 48px;
+        background-size: 2.9%;
+        background-position: right 13px center;
+        margin-bottom: 5px;
+    }
 }
 
 .radio-item {
     display: inline-block;
-    margin-right: 12px;
+    margin-right: 30px;
     margin-bottom: 7px;
 }
+
+@media screen and (min-width: 1200px) {
+    .radio-item {
+        margin-bottom: 0;
+    }
+}
+
+
 
 .radio-text::before {
     content: "";
     display: inline-block;
-    width: 17px;
-    height: 17px;
-    margin-right: 5px;
+    width: 25px;
+    height: 28px;
+    margin-right: 6px;
 
     background-image: url(../svg/form-empty-circle.svg);
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: 17px;
+    background-size: 25px;
     vertical-align: middle;
 }
+
+@media screen and (min-width: 1200px) {
+    .radio-item {
+        display: inline-block;
+        margin-right: 12px;
+        margin-bottom: 7px;
+    }
+
+    .radio-text::before {
+        width: 17px;
+        height: 18px;
+        margin-right: 5px;
+        background-size: 17px;
+    }
+}
+
+
 
 .banner__radio_checked:checked ~ .radio-text::before {
     background-image: url(../svg/form-circle.svg);
 }
+
 
 .banner__textarea {
     box-sizing: border-box;
     height: 132px;
     width: 100%;
     resize: none;
-    padding: 21px 0 0 21px;
+    padding: 20px 0 0 21px;
+}
+
+@media screen and (min-width: 1200px) {
+    .banner__textarea {
+        padding: 21px 0 0 21px;
+    }
 }
 
 .banner__textarea, .banner__input {
