--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,13 @@ input:focus {
     width: 27px;
 }
 
+@media screen and (min-width: 641px) {
+    .banner__close {
+        top: -37px;
+        right: 0;
+    }
+}
+
 @media screen and (min-width: 1200px) {
     .banner__close {
         top: -26px;
@@ -217,14 +224,27 @@ input:focus {
     padding: 0 25px 30px 25px;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 641px) {
     .banner {
-        height: 590px;
+        height: 596px;
         width: 390px;
-        top: calc(50% - (513px/2));
+        top: calc(50% - (526px/2));
         left: calc(50% - (390px/2));
         padding: 0 30px 30px 30px;
+    }
 
+    @media screen and (min-width: 1200px) {
+        .banner {
+            height: 590px;
+            top: calc(50% - (513px/2));
+        }
+    }
+}
+
+@media screen and (orientation: landscape) and (max-height: 760px) {
+    .banner {
+        position: absolute;
+        top: 82px;
     }
 }
 
@@ -242,10 +262,17 @@ input:focus {
     margin-left: 0;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 641px) {
     .banner .banner-header__heading {
         margin-top: 47px;
-        margin-left: 5px;
+        margin-bottom: -10px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        .banner .banner-header__heading {
+            margin-top: 47px;
+            margin-left: 5px;
+        }
     }
 }
 
@@ -253,8 +280,14 @@ input:focus {
     margin-top: 3px;
 }
 
+@media scre and (min-width: 641px) and (max-width: 1199px) {
+    .banner .banner-header::after {
+
+    }
+}
+
 @media screen and (min-width: 1200px) {
-    .banner .banner-header ::after {
+    .banner .banner-header::after {
         margin-left: 125px;
         margin-top: unset;
         /*margin-bottom: 200px;*/
@@ -277,8 +310,14 @@ input:focus {
     }
 }
 
-@media screen and (min-width: 1200px) {
+
+
+@media screen and (min-width: 641px) and (max-width: 1199px) {
     .banner__row {
+        margin-top: 34px;
+    }
+
+    .banner__row:nth-child(4) {
         margin-top: 24px;
     }
 }
@@ -300,6 +339,16 @@ input:focus {
 
 .banner__phrase:nth-child(1) {
     margin-bottom: 8px;
+}
+
+@media screen and (min-width: 641px) and (max-width: 1199px) {
+    .banner__row:nth-child(2) {
+        margin-top: 24px;
+    }
+
+    .banner__row:nth-child(3) {
+        margin-top: 21px;
+    }
 }
 
 @media screen and (min-width: 1200px) {
