--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,7 @@ input:focus {
     .banner__close {
         top: -26px;
         left: 95.9%;
-        width: unset;
+        width: 18px;
     }
 }
 
@@ -237,6 +237,7 @@ input:focus {
         .banner {
             height: 590px;
             top: calc(50% - (513px/2));
+            left: calc(50% - (390px/2) + 1px);
         }
     }
 }
@@ -266,12 +267,17 @@ input:focus {
     .banner .banner-header__heading {
         margin-top: 47px;
         margin-bottom: -10px;
+        margin-left: 4px;
+    }
+
+    .banner .banner-header__heading::after {
+        margin-left: 125px;
     }
 
     @media screen and (min-width: 1200px) {
         .banner .banner-header__heading {
-            margin-top: 47px;
             margin-left: 5px;
+
         }
     }
 }
@@ -280,17 +286,10 @@ input:focus {
     margin-top: 3px;
 }
 
-@media scre and (min-width: 641px) and (max-width: 1199px) {
-    .banner .banner-header::after {
-
-    }
-}
-
 @media screen and (min-width: 1200px) {
     .banner .banner-header::after {
         margin-left: 125px;
         margin-top: unset;
-        /*margin-bottom: 200px;*/
     }
 }
 
@@ -322,6 +321,12 @@ input:focus {
     }
 }
 
+@media screen and (min-width: 1200px) {
+    .banner__row:nth-child(1) {
+        margin-top: 35px;
+    }
+}
+
 .banner__phrase {
     display: inline-block;
     width: 100%;
@@ -342,6 +347,10 @@ input:focus {
 }
 
 @media screen and (min-width: 641px) and (max-width: 1199px) {
+    .banner__phrase:nth-child(1) {
+        margin-bottom: 8px;
+    }
+
     .banner__row:nth-child(2) {
         margin-top: 24px;
     }
@@ -371,12 +380,13 @@ input:focus {
     height: 50px;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 641px) {
     .banner__input {
-        height: 48px;
+        height: 49px;
         background-size: 2.9%;
         background-position: right 13px center;
-        margin-bottom: 5px;
+        padding-top: 0;
+        margin-bottom: 4px;
     }
 }
 
@@ -832,7 +842,7 @@ input:focus {
 }
 
 @media screen and (min-width: 641px) {
-    .section-heading::after {
+    .main .section-heading::after {
         padding-top: 7px;
     }
 }
