--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,8 @@ input:focus {
 
 @media screen and (min-width: 641px) and (max-width: 1199px) {
     .content-column {
-        max-width: 90.63719116%;
+        max-width: unset;
+        margin: 0 35px;
     }
 }
 
@@ -1153,14 +1154,18 @@ input:focus {
 .two-columns-section {
     display: flex;
     flex-wrap: wrap;
-    margin: 0 auto;
     padding-top: 44px;
+}
 
+@media screen and (max-width: 640px) {
+    .two-columns-section {
+        margin: 0 auto;
+    }
 }
 
 @media screen and (min-width: 641px) and (max-width: 1199px) {
     .two-columns-section {
-        justify-content: space-between;
+        flex-wrap: nowrap;
         padding-top: 50px;
     }
 }
@@ -1179,11 +1184,12 @@ input:focus {
 @media screen and (min-width: 641px) and (max-width: 1199px) {
     .section-articles {
         margin: 0;
-        width: 56.30372493%;
+        flex-basis: calc(100% - (35px*3) - 270px)
+        /*width: auto;*/
     }
 }
 
-@media screen and (min-width: 1199px) {
+@media screen and (min-width: 1200px) {
     .section-articles {
         width: 76.83760684%;
     }
@@ -1198,8 +1204,10 @@ input:focus {
 
 @media screen and (min-width: 641px) and (max-width: 1199px) {
     .articles {
-        justify-content: space-between;
-        gap: 41px;
+        flex-flow: row;
+        flex-wrap: wrap;
+        /*justify-content: space-between;*/
+        /*gap: 41px;*/
     }
 }
 
@@ -1241,8 +1249,9 @@ input:focus {
 
 @media screen and (min-width: 641px) and (max-width: 1199px) {
     .articles__item {
+        flex-basis: 100%;
         margin-left: -2px;
-        max-width: 393px;
+        /*max-width: 393px;*/
     }
 }
 
@@ -1398,9 +1407,24 @@ input:focus {
     }
 }
 
+@media screen and (min-width: 641px) and (max-width: 1199px) {
+    .snippet__link {
+        display: block;
+        width: 100%;
+        height: auto;
+    }
+
+    .snippet__img {
+        width: 100%;
+        max-width: 100%;
+        height: auto;
+    }
+}
+
 .snippet__img {
-    width: auto;
+    width: 100%;
     max-width: 100%;
+    height: auto;
 }
 
 /*Aside-section styles*/
@@ -1411,7 +1435,8 @@ input:focus {
 
 @media screen and (min-width: 641px) and (max-width: 1199px) {
     .aside {
-        width: 38.68194842%;
+        min-width: 271px;
+        margin-left: 35px;
     }
 }
 
